--- a/SMS_Presentation/Views/Equipamento/IncluirEquipamento.cshtml
+++ b/SMS_Presentation/Views/Equipamento/IncluirEquipamento.cshtml
@@ -1,7 +1,369 @@
-﻿
-@{
-    ViewBag.Title = "IncluirEquipamento";
+﻿@using Presentation.Extensions
+@model SMS_Solution.ViewModels.EquipamentoViewModel
+@{ Layout = "~/Views/Shared/_Layout_Admin.cshtml"; }
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title">
+        <h3 class="title">Equipamentos & Patrimônio</h3>
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaEquipamento", "Equipamento")">Equipamentos & Patrimônio</a>
+            </li>
+            <li class="active">
+                <strong>Equipamentos & Patrimônio - Inclusão</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Equipamentos & Patrimônio - Inclusão</h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li>
+                                <a href="#">Configuração 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Configuração 2</a>
+                            </li>
+                        </ul>
+                        <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </div>
+                </div>
+                @using (Html.BeginForm("IncluirEquipamento", "Equipamento", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", @id = "pwd-container1" }))
+                {
+                    <div class="ibox-content">
+                        @Html.AntiForgeryToken()
+                        @if (!ViewData.ModelState.IsValid)
+                        {
+                <div class="alert alert-danger">
+                    <button type="button" class="close" data-dismiss="alert">Fechar</button>
+                    @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+                </div>}
+
+        <div class="tabs-container">
+            <ul class="nav nav-tabs">
+                <li class="active"><a data-toggle="tab" href="#tab-1">Dados Gerais</a></li>
+                <li class=""><a data-toggle="tab" href="#tab-2">Anexos</a></li>
+            </ul>
+
+            <div class="tab-content">
+
+                @*Dados Gerais*@
+                <div id="tab-1" class="tab-pane active">
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                                <div class="col-lg-3 col-md-3 col-xs-12">
+                                    @Html.HiddenFor(m => m.ASSI_CD_ID)
+                                    @Html.HiddenFor(m => m.EQUI_DT_CADASTRO)
+                                    @Html.HiddenFor(m => m.EQUI_IN_ATIVO)
+                                    Categoria*
+                                    @Html.DropDownListFor(m => m.CAEQ_CD_ID, (SelectList)ViewBag.Tipos, "Selecionar", new { @class = "form-control", autofocus = true })
+                                    @Html.ValidationMessageFor(m => m.CAEQ_CD_ID, "", new { @style = "color:red" })
+                                </div>
+                                <div class="col-lg-7 col-md-7 col-xs-12">
+                                    Nome*
+                                    @Html.TextBoxFor(m => m.EQUI_NM_NOME, new { @class = "form-control", autofocus = true })
+                                    @Html.ValidationMessageFor(m => m.EQUI_NM_NOME, "", new { @style = "color:red" })
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                    Núm.Patrimônio
+                                    @Html.TextBoxFor(m => m.EQUI_NR_NUMERO, new { @class = "form-control", autofocus = true })
+                                    @Html.ValidationMessageFor(m => m.EQUI_NR_NUMERO, "", new { @style = "color:red" })
+                                </div>
+                            </div>
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                    Data de Compra*
+                                    @Html.TextBoxFor(m => m.EQUI_DT_COMPRA, "{0:dd/MM/yyyy}", new { @class = "form-control date-picker", autofocus = true })
+                                    @Html.ValidationMessageFor(m => m.EQUI_DT_COMPRA, "", new { @style = "color:red" })
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                    Valor de Compra*
+                                    @Html.TextBoxFor(m => m.EQUI_VL_VALOR, "{0:n2}", new { @class = "form-control", autofocus = true })
+                                    @Html.ValidationMessageFor(m => m.EQUI_VL_VALOR, "", new { @style = "color:red" })
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                    Vida Útil (Meses)
+                                    @Html.TextBoxFor(m => m.EQUI_NR_VIDA_UTIL, new { @class = "form-control", autofocus = true })
+                                    @Html.ValidationMessageFor(m => m.EQUI_NR_VIDA_UTIL, "", new { @style = "color:red" })
+                                </div>
+                            </div>
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                                <div class="col-lg-12 col-md-12 col-xs-12">
+                                    Descrição
+                                    @Html.TextAreaFor(m => m.EQUI_DS_DESCRICAO, new { @class = "form-control", style = "width: 100%; height: 100px;", autofocus = true })
+                                    @Html.ValidationMessageFor(m => m.EQUI_DS_DESCRICAO, "", new { @style = "color:red" })
+                                </div>
+                            </div>
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                    Data de Baixa
+                                    @Html.TextBoxFor(m => m.EQUI_DT_BAIXA, "{0:dd/MM/yyyy}", new { @class = "form-control date-picker", autofocus = true })
+                                    @Html.ValidationMessageFor(m => m.EQUI_DT_BAIXA, "", new { @style = "color:red" })
+                                </div>
+                                <div class="col-lg-10 col-md-10 col-xs-12">
+                                    Motivo da Baixa
+                                    @Html.TextAreaFor(m => m.EQUI_DS_MOTIVO_BAIXA, new { @class = "form-control", style = "width: 100%; height: 100px;", autofocus = true })
+                                    @Html.ValidationMessageFor(m => m.EQUI_DS_MOTIVO_BAIXA, "", new { @style = "color:red" })
+                                </div>
+                            </div>
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                    Tem Manutenção?
+                                    <br />
+                                    @Html.CheckBoxFor(m => m.AvisaManutencao, new { @class = "checkbox i-checks" })
+                                    @Html.ValidationMessageFor(m => m.AvisaManutencao, "", new { @style = "color:red" })
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-xs-12">
+                                    Periodicidade da Manutenção
+                                    @Html.DropDownListFor(m => m.PERI_CD_ID, (SelectList)ViewBag.Periodicidades, "Selecionar", new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(m => m.PERI_CD_ID, "", new { @style = "color:red" })
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                @*Imagens - Foto e Anexos*@
+                <div id="tab-2" class="tab-pane">
+                    <div class="panel-body">
+                        <div class="row">
+                            <div style="margin-left: 15px;" class="col-lg-12 col-md-12 col-xs-12">
+                                <div class="form-group">
+                                    <h4>Foto do Equipamento</h4><input type="file" accept=".jpg, .png, .jpeg, .gif|images/*" name="file" id="imgEquipamento" class="btn btn-sm btn-warning" multiple />
+                                    <br />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <hr />
+                            <div class="col-lg-12 col-md-12 col-xs-12">
+                                <h4>Anexos</h4><input class="btn btn-sm btn-warning" id="inputFile" type="file" multiple />
+                                <br />
+                                <div class="form-group">
+                                    <div class="ibox-content">
+                                        <br />
+                                        <table style="width: 100%;" class="table table-striped table-bordered table-hover dataTables-example" id="myFiles">
+                                            <thead style="background-color:lightsteelblue">
+                                                <tr>
+                                                    <td>Nome</td>
+                                                    <td>Tipo</td>
+                                                    <td>Ações</td>
+                                                </tr>
+                                            </thead>
+                                            <tbody></tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="form-group">
+            @Html.ButtonActionSubmit(text: "BtnSubmit", htmlAttributes: new { id = "submit", style = "display: none;" })
+            <button style="margin-left: 15px; margin-top: 5px;" class="btnSubmit btn btn-sm btn-success" id="basictoast" type="button">Confirma Inclusão</button>
+            @Html.ButtonLinkIndex(text: "Voltar", action: "VoltarBaseEquipamento", controller: "Equipamento", htmlAttributes: new { style = "margin-top: 5px;" })
+        </div>
+    </div>}
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Styles {
+    <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
+    @Styles.Render("~/Content/plugins/iCheck/iCheckStyles")
+    @Styles.Render("~/plugins/toastrStyles")
 }
+@section Scripts {
+    @Scripts.Render("~/plugins/toastr")
+    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+    <script src="~/Scripts/UploadAnexo.js"></script>
 
-<h2>IncluirEquipamento</h2>
+    <script type="text/javascript" language="javascript">
+        $(function () {
+            $('.date-picker').datepicker(
+                {
+                    dateFormat: 'dd/mm/yy',
+                    dayNames: ['Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'],
+                    dayNamesMin: ['D', 'S', 'T', 'Q', 'Q', 'S', 'S', 'D'],
+                    dayNamesShort: ['Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'Sáb', 'Dom'],
+                    monthNames: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
+                    monthNamesShort: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'],
+                    nextText: 'Proximo',
+                    prevText: 'Anterior',
+                    showOn: "focus"
+                }
+            )
+                .css("display", "normal")
+                .next("button").button({
+                    icons: { primary: "ui-icon-calendar" },
+                    label: "Selecione uma data",
+                    text: false
+                });
+        });
+    </script>
 
+    <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+            $("#cep").mask("99999-999");
+            $('.date-picker').mask('99/99/9999');
+        });
+    </script>
+
+    @Scripts.Render("~/plugins/iCheck")
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            $('.i-checks').iCheck({
+                checkboxClass: 'icheckbox_square-green',
+                radioClass: 'iradio_square-green',
+            });
+
+        });
+    </script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            var i = -1;
+            var toastCount = 0;
+            var $toastlast;
+            var getMessage = function () {
+                var msg = 'Hi, welcome to Inspinia. This is example of Toastr notification box.';
+                return msg;
+            };
+
+            $('#basictoast').click(function () {
+                // Display a success toast, with a title
+                toastr.success('Inclusão em andamento!')
+            });
+            $('#showtoast').click(function () {
+                var shortCutFunction = $("#toastTypeGroup input:radio:checked").val();
+                var msg = $('#message').val();
+                var title = $('#title').val() || '';
+                var $showDuration = $('#showDuration');
+                var $hideDuration = $('#hideDuration');
+                var $timeOut = $('#timeOut');
+                var $extendedTimeOut = $('#extendedTimeOut');
+                var $showEasing = $('#showEasing');
+                var $hideEasing = $('#hideEasing');
+                var $showMethod = $('#showMethod');
+                var $hideMethod = $('#hideMethod');
+                var toastIndex = toastCount++;
+                toastr.options = {
+                    closeButton: $('#closeButton').prop('checked'),
+                    debug: $('#debugInfo').prop('checked'),
+                    progressBar: $('#progressBar').prop('checked'),
+                    positionClass: $('#positionGroup input:radio:checked').val() || 'toast-top-right',
+                    onclick: null
+                };
+                if ($('#addBehaviorOnToastClick').prop('checked')) {
+                    toastr.options.onclick = function () {
+                        alert('You can perform some custom action after a toast goes away');
+                    };
+                }
+                if ($showDuration.val().length) {
+                    toastr.options.showDuration = $showDuration.val();
+                }
+                if ($hideDuration.val().length) {
+                    toastr.options.hideDuration = $hideDuration.val();
+                }
+                if ($timeOut.val().length) {
+                    toastr.options.timeOut = $timeOut.val();
+                }
+                if ($extendedTimeOut.val().length) {
+                    toastr.options.extendedTimeOut = $extendedTimeOut.val();
+                }
+                if ($showEasing.val().length) {
+                    toastr.options.showEasing = $showEasing.val();
+                }
+                if ($hideEasing.val().length) {
+                    toastr.options.hideEasing = $hideEasing.val();
+                }
+                if ($showMethod.val().length) {
+                    toastr.options.showMethod = $showMethod.val();
+                }
+                if ($hideMethod.val().length) {
+                    toastr.options.hideMethod = $hideMethod.val();
+                }
+                if (!msg) {
+                    msg = getMessage();
+                }
+                $("#toastrOptions").text("Command: toastr["
+                    + shortCutFunction
+                    + "](\""
+                    + msg
+                    + (title ? "\", \"" + title : '')
+                    + "\")\n\ntoastr.options = "
+                    + JSON.stringify(toastr.options, null, 2)
+                );
+                var $toast = toastr[shortCutFunction](msg, title); // Wire up an event handler to a button in the toast, if it exists
+                $toastlast = $toast;
+                if ($toast.find('#okBtn').length) {
+                    $toast.delegate('#okBtn', 'click', function () {
+                        alert('you clicked me. i was toast #' + toastIndex + '. goodbye!');
+                        $toast.remove();
+                    });
+                }
+                if ($toast.find('#surpriseBtn').length) {
+                    $toast.delegate('#surpriseBtn', 'click', function () {
+                        alert('Surprise! you clicked me. i was toast #' + toastIndex + '. You could perform an action here.');
+                    });
+                }
+            });
+            function getLastToast() {
+                return $toastlast;
+            }
+            $('#clearlasttoast').click(function () {
+                toastr.clear(getLastToast());
+            });
+            $('#cleartoasts').click(function () {
+                toastr.clear();
+            });
+
+        });
+    </script>
+
+    <script>
+        SendFilesV2('imgEquipamento', 'Equipamento', 'UploadFileToSession');
+    </script>
+
+    @if (ViewBag.Message != null)
+    {
+<script type="text/javascript">
+            window.onload = function () {
+                  alert("@ViewBag.Message");
+            };
+</script>
+}
+}
