--- a/SMS_Presentation/Views/Equipamento/VerBaixados.cshtml
+++ b/SMS_Presentation/Views/Equipamento/VerBaixados.cshtml
@@ -1,7 +1,159 @@
-﻿
+﻿@using Presentation.Extensions
+@using CrossCutting;
+@model EntitiesServices.Model.EQUIPAMENTO
 @{
-    ViewBag.Title = "VerBaixados";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
+}
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title"> 
+        <h3 class="title">Equipamentos & Patrimônio</h3> 
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaEquipamento", "Equipamento")">Equipamentos & Patrimônio & Patrimônio</a>
+            </li>
+            <li class="active">
+                <strong>Equipamentos Baixados</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Equipamentos Baixados</h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li>
+                                <a href="#">Config option 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Config option 2</a>
+                            </li>
+                        </ul>
+                        <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="ibox-content">
+                    <div class="row">
+                        <div class="form-group">
+                            @Html.ButtonLinkIndex(text: "Gerar Relatório", action: "GerarRelatorioLista", controller: "Equipamento", routeValues: new { tipo = 2 })
+                            @Html.ButtonLinkIndex(text: "Voltar", action: "MontarTelaEquipamento", controller: "Equipamento")
+                        </div>
+                            @if ((ViewBag.Listas as List<EntitiesServices.Model.EQUIPAMENTO>).Count > 0)                                        {
+                                <table class="table table-striped table-bordered table-hover dataTables-example">
+                                    <thead style ="background-color:lightsteelblue">
+                                        <tr>
+                                            <th>Categoria</th>   
+                                            <th>Nome</th>   
+                                            <th>Número</th>
+                                            <th>Valor</th>
+                                            <th>Data Compra</th>
+                                            <th>Data Baixa</th>  
+                                            <th>Depreciação</th>
+                                            <th>Manutenção</th>
+                                            <th></th>   
+                                            <th class="td-one-action">Ações</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var cond in (ViewBag.Listas as List<EntitiesServices.Model.EQUIPAMENTO>))
+                                        {
+                                            <tr>
+                                                <td>@cond.CATEGORIA_EQUIPAMENTO.CAEQ_NM_NOME</td>
+                                                <td>@cond.EQUI_NM_NOME</td>
+                                                <td>@cond.EQUI_NR_NUMERO</td>
+                                                @if (cond.EQUI_VL_VALOR != null)
+	                                            {
+                                                    <td>@CrossCutting.Formatters.DecimalFormatter(cond.EQUI_VL_VALOR.Value)</td>
+                                                }
+                                                else
+                                                {
+                                                    <td>-</td>
+                                                }
+                                                <td>@cond.EQUI_DT_COMPRA.Value.ToShortDateString()</td>
+                                                @if (cond.EQUI_DT_BAIXA != null)
+	                                            {
+                                                    <td>@cond.EQUI_DT_BAIXA.Value.ToShortDateString()</td>
+                                                }
+                                                else
+                                                {
+                                                    <td>-</td>
+                                                }
+                                                <td>@ApplicationServices.Services.EquipamentoAppService.CalcularDiasDepreciacaoStatic(cond).ToString()</td>
+                                                <td>@ApplicationServices.Services.EquipamentoAppService.CalcularDiasManutencaoStatic(cond).ToString()</td>
+                                                @if (!String.IsNullOrEmpty(cond.EQUI_AQ_FOTO))
+	                                            {
+                                                    <td><img src="@Url.Content(cond.EQUI_AQ_FOTO)" style = "width: auto; height: auto; max-height: 55px; max-width: 45px;"></td>
+                                                }
+                                                else
+                                                {
+                                                    <td><img src="~/Imagens/Base/icone_imagem.jpg" style = "width: auto; height: auto; max-height: 55px; max-width: 45px;"></td>
+                                                }
+                                                <td class="td-one-action">
+                                                    @if (ViewBag.Perfil == "ADM" || ViewBag.Perfil == "SIN")
+                                                    {
+                                                        @Html.TableLinkDetails(cond.EQUI_CD_ID, "EditarEquipamento","fa-edit", "Editar")
+                                                    }
+                                                    else if (ViewBag.Perfil == "POR")
+                                                    {
+                                                        @Html.TableLinkDetails(cond.EQUI_CD_ID, "VerEquipamento","fa-edit", "Consultar")
+                                                    }
+                                                </td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            }
+                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Styles {
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />  
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
 }
 
-<h2>VerBaixados</h2>
+@section Scripts {
+
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+    
+   
+    <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+        });
+    </script>
+}
+
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewBag.Message");
+            };
+    </script>
+}
+
+
 
