--- a/SMS_Presentation/Views/Equipamento/VerManutencaoEquipamento.cshtml
+++ b/SMS_Presentation/Views/Equipamento/VerManutencaoEquipamento.cshtml
@@ -1,7 +1,153 @@
-﻿
+﻿@using Presentation.Extensions
+@model EntitiesServices.Model.EQUIPAMENTO_MANUTENCAO
 @{
-    ViewBag.Title = "VerManutencaoEquipamento";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
 }
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title"> 
+        <h3 class="title">Equipamentos & Patrimônio</h3> 
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaEquipamento", "Equipamento")">Equipamentos & Patrimônio</a>
+            </li>
+            <li>
+                <a href="@Url.Action("EditarEquipamento", "Equipamento")">Equipamentos & Patrimônio - Edição</a>
+            </li>
+            <li class="active">
+                <strong>Equipamentos & Patrimônio - Manutenções</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Equipamentos & Patrimônio - Manutenções</h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li>
+                                <a href="#">Configuração 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Configuração 2</a>
+                            </li>
+                        </ul>
+                        <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </div>
+                </div>
+                @using (Html.BeginForm("VerEquipamentoManutencao", "Equipamento", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", @id="pwd-container1" }))
+                {
+                    <div class="ibox-content">
+                        <div class="row">
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">                
+                                <div class="col-lg-3 col-md-3 col-xs-12">
+                                    Categoria
+                                    @Html.TextBoxFor(m => m.EQUIPAMENTO.CATEGORIA_EQUIPAMENTO.CAEQ_NM_NOME, new { @class = "form-control", @readonly="readonly", @style="color:green" })
+                                </div>
+                                <div class="col-lg-7 col-md-7 col-xs-12">
+                                    Nome
+                                    @Html.TextBoxFor(m => m.EQUIPAMENTO.EQUI_NM_NOME, new { @class = "form-control", @readonly="readonly", @style="color:green" })
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                    Número
+                                    @Html.TextBoxFor(m => m.EQUIPAMENTO.EQUI_NR_NUMERO, new { @class = "form-control", @readonly="readonly", @style="color:green" })
+                                </div>
+                            </div>
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">                
+                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                    Data Manutenção
+                                    @Html.TextBoxFor(m => m.EQMA_DT_MANUTENCAO, "{0:dd/MM/yyyy}", new { @class = "form-control", @readonly="readonly" })
+                                </div>
+                                <div class="col-lg-4 col-md-4 col-xs-12">
+                                    Responsável
+                                    @Html.TextBoxFor(m => m.FORNECEDOR.FORN_NM_NOME, new { @class = "form-control", @readonly="readonly" })
+                                </div>
+                            </div>
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">                
+                                <div class="col-lg-12 col-md-12 col-xs-12">
+                                    Observações
+                                    @Html.TextAreaFor(m => m.EQMA_TX_OBSERVACOES, new { @class = "form-control", style = "width: 1070px; height: 400px;", @readonly="readonly"})
+                                </div>
+                            </div>
 
-<h2>VerManutencaoEquipamento</h2>
+                        </div>
+                        <div class="form-group">
+                            @Html.ButtonLinkIndex(text: "Voltar", action: "VoltarAnexoEquipamento", controller: "Equipamento")
+                        </div>
+                    </div>
+                }
+            </div>
+         </div>
+    </div>
+</div>
+
+@section Styles {
+    <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />  
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
+}
+@section Scripts {
+   
+    
+    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+
+    <script type="text/javascript" language="javascript">
+        $(function () {
+            $('.date-picker').datepicker(
+                {
+                    dateFormat: 'dd/mm/yy',
+                    dayNames: ['Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'],
+                    dayNamesMin: ['D', 'S', 'T', 'Q', 'Q', 'S', 'S', 'D'],
+                    dayNamesShort: ['Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'Sáb', 'Dom'],
+                    monthNames: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
+                    monthNamesShort: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'],
+                    nextText: 'Proximo',
+                    prevText: 'Anterior',
+                    showOn: "focus"
+                }
+            )
+            .css("display", "normal")
+            .next("button").button({
+                icons: { primary: "ui-icon-calendar" },
+                label: "Selecione uma data",
+                text: false 
+            });
+        });
+    </script>  
+    
+    <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+            $("#cep").mask("99999-999");
+        });
+    </script>
+
+    @if (ViewBag.Message != null)
+    {
+        <script type="text/javascript">
+            window.onload = function () {
+                  alert("@ViewBag.Message");
+            };
+        </script>
+    }
+}
 
