--- a/SMS_Presentation/Views/Equipamento/VerManutencoesVencidas.cshtml
+++ b/SMS_Presentation/Views/Equipamento/VerManutencoesVencidas.cshtml
@@ -1,7 +1,178 @@
-﻿
+﻿@using Presentation.Extensions
+@using CrossCutting;
+@model EntitiesServices.Model.EQUIPAMENTO
 @{
-    ViewBag.Title = "VerManutencoesVencidas";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
+}
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title"> 
+        <h3 class="title">Equipamentos & Patrimônio</h3> 
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaEquipamento", "Equipamento")">Equipamentos & Patrimônio</a>
+            </li>
+            <li class="active">
+                <strong>Manutenções - Vencidas</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+    <div class="row">
+        <div class="col-lg-3">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <span class="label label-primary pull-right">Hoje</span>
+                    <h5>Equipamentos & Patrimônio</h5>
+                </div>
+                <div class="ibox-content">
+                    <h1 class="no-margins">@ViewBag.numero</h1>
+                    <div class="stat-percent font-bold text-navy">32% <i class="fa fa-level-up"></i></div>
+                    <small>Manutenções Vencidas</small>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Manutenções - Vencidas</h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li>
+                                <a href="#">Config option 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Config option 2</a>
+                            </li>
+                        </ul>
+                        <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="ibox-content">
+                    <div class="form-group">
+                        @Html.ButtonLinkIndex(text: "Gerar Relatório", action: "GerarRelatorioManutencaoVencida", controller: "Equipamento")
+                        @Html.ButtonLinkIndex(text: "Voltar", action: "MontarTelaEquipamento", controller: "Equipamento")
+                    </div>
+                    <div class="row">
+                            @if ((ViewBag.Lista as List<EntitiesServices.Model.EQUIPAMENTO>).Count > 0)                                        {
+                                <table class="table table-striped table-bordered table-hover dataTables-example">
+                                    <thead style ="background-color:lightsteelblue">
+                                        <tr>
+                                            <th>Categoria</th>   
+                                            <th>Nome</th>   
+                                            <th>Número</th>
+                                            <th>Data Manutenção</th>
+                                            <th>Periodicidade</th>
+                                            <th>Atraso (Dias)</th>
+                                            <th></th>   
+                                            <th class="td-one-action">Ações</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var cond in (ViewBag.Lista as List<EntitiesServices.Model.EQUIPAMENTO>))
+                                        {
+                                            <tr>
+                                                <td>@cond.CATEGORIA_EQUIPAMENTO.CAEQ_NM_NOME</td>
+                                                <td>@cond.EQUI_NM_NOME</td>
+                                                <td>@cond.EQUI_NR_NUMERO</td>
+                                                <td>@cond.EQUI_DT_MANUTENCAO.Value.ToShortDateString()</td>
+                                                <td>@cond.PERIODICIDADE.PERI_NM_NOME</td>
+                                                <td>@ApplicationServices.Services.EquipamentoAppService.CalcularDiasManutencaoStatic(cond).ToString()</td>
+                                                @if (!String.IsNullOrEmpty(cond.EQUI_AQ_FOTO))
+	                                            {
+                                                    <td><img src="@Url.Content(cond.EQUI_AQ_FOTO)" style = "width: auto; height: auto; max-height: 55px; max-width: 45px;"></td>
+                                                }
+                                                else
+                                                {
+                                                    <td><img src="~/Imagens/icone_imagem.jpg" style = "width: auto; height: auto; max-height: 55px; max-width: 45px;"></td>
+                                                }
+                                                <td class="td-one-action">
+                                                    @if (ViewBag.Perfil == "ADM" || ViewBag.Perfil == "SIN")
+                                                    {
+                                                        @Html.TableLinkDetails(cond.EQUI_CD_ID, "EditarEquipamento","fa-edit", "Editar")
+                                                    }
+                                                    else if (ViewBag.Perfil == "POR")
+                                                    {
+                                                        @Html.TableLinkDetails(cond.EQUI_CD_ID, "VerEquipamento","fa-edit", "Consultar")
+                                                    }
+                                                </td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            }
+                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Styles {
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />  
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
+    @Styles.Render("~/plugins/sweetAlertStyles")
 }
 
-<h2>VerManutencoesVencidas</h2>
+@section Scripts {
+
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    @Scripts.Render("~/plugins/sweetAlert")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+    
+   
+    <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+        });
+    </script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            $('.demo3').click(function () {
+                swal({
+                    title: "Confirma a duplicação do produto?",
+                    text: "A tela de edição deste produto será aberta logo após a confirmação",
+                    type: "warning",
+                    showCancelButton: true,
+                    confirmButtonColor: "#DD6B55",
+                    confirmButtonText: "Confirmar",
+                    cancelButtonText: "Cancelar",
+                   closeOnConfirm: false
+                }, function () {
+                    swal("Duplicado!", "Uma cópia deste produto foi criada", "success");
+                });
+            });
+        });
+    </script>
+
+}
+
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewBag.Message");
+            };
+    </script>
+}
 
